# Rendering-Template

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  README.md
App/: CMakeLists.txt
App/src/: App.cpp  AppLayer.cpp  AppLayer.h  ImGuiWrapper.cpp  sandbox.cpp
App/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
CMake/: CommonMacros.txt
Core/: CMakeLists.txt
Core/src/: CoreHeader.h  CorePCHeader.h
Core/src/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.cpp  Window.h
Core/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiWrapper.cpp
Core/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRendererContext.cpp  OpenGLRendererContext.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Core/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Core/src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Core/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
